# bevy_game_of_life

./: .gitignore  Cargo.toml  README.md  compilation.md  index.html
src/: camera.rs  config.toml  game_logic.rs  input.rs  lib.rs  main.rs  render.rs  ui.rs
